update the apps with the design backgrounders

--- a/INFO/0.md
+++ b/INFO/0.md
@@ -7,9 +7,11 @@ permalink: /FOSS/0/
 
 *The connection between the sister apps.*
 
+## Vision Statement Summary For This App
+
 RockRapids.INFO will serve as a lightweight, centralized digital hub that aggregates the most essential information from all other Rock Rapids apps ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK ...  providing quick access to key highlights through abbreviated summaries and direct links. The platform will function as both an **entry point** for newcomers exploring Rock Rapids digital resources and a convenient dashboard for regular citizens and volunteers who want efficient access to information / opportunities across multiple domains. A **extra clean, sparse, minimalist interface** will organize content into logical categories that mirror the ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK sister apps ... eliminating unnecessary details on the top level *.INFO app ... since the full verbose details is available on sister apps for faster loading and easier navigation. The platform will prioritize time-sensitive current data and information like upcoming events, new job postings, and community alerts to ensure users stay informed about matters requiring immediate attention. **Intelligent content curation algorithms** will be developed to showcase trending topics and popular content from across the Rock Rapids digital ecosystem based on user engagement metrics. Personalization features will allow users to customize their information dashboard, somewhat, according to their specific interests, followed news and personal needs as members of the Rock Rapids community.
 
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.info**
+## Minimal Viable Prototype (MVP) Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -24,3 +26,19 @@ What follows below is a brief vision statement and Minimal Viable Prototype (MVP
 5. Develop user accounts with basic preference settings for personalized content display
 
 6. Launch with connections to at least three other Rock Rapids apps for initial content sourcing
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
