--- a/INFO/1.md
+++ b/INFO/1.md
@@ -3,16 +3,15 @@ layout: page
 title: ART
 permalink: /FOSS/1/
 ---
-
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.art**
-
 **Various Artists, Different Arts, Crafts, Collection**
 
-Showcasing the diversity of talent in/around Rock Rapids.
+*Showcasing the diversity of talent in/around Rock Rapids.*
+
+## Vision Statement Summary For This App
 
 The rockrapids.art platform will showcase the diverse artistic talents of Rock Rapids residents, creating a vibrant digital gallery that celebrates creativity in all its forms—from traditional fine arts to unique crafts like pickling and meat smoking. Local artists will gain visibility through personalized profile pages featuring their work, background stories, and contact information for commissions or purchases. The platform will foster community connections by highlighting upcoming workshops, classes, and collaborative opportunities for artists and art enthusiasts alike. Seasonal spotlights will rotate to ensure all artists receive equal exposure regardless of medium or experience level. An interactive map will guide visitors to studio locations, public art installations, and craft workshops throughout Rock Rapids. The platform will serve as both a promotional tool for local talent and an educational resource that inspires creativity in future generations of Rock Rapids artists.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,4 +26,21 @@ The rockrapids.art platform will showcase the diverse artistic talents of Rock R
 5. Create an admin dashboard for content moderation and featured artist selection
 
 6. Test and launch a basic version with 10-15 local artist profiles as initial content
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
+
 
