--- a/INFO/4.md
+++ b/INFO/4.md
@@ -3,16 +3,15 @@ layout: page
 title: SHOP
 permalink: /FOSS/4/
 ---
-
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.shop**
-
 **Shop is about the events, sales, specials, new introductions, happenings, excitment in the retail sector**
 
-This app complements the .store app, but it's mostly about HAPPENINGS ... special events, introductions and all kinds of exciting things that are happening now or this week or this month in the retail sector.
+*Mostly about HAPPENINGS ... special events, introductions and all kinds of exciting things that are happening now or this week or this month in the retail sector ... this app complements the featured item listing that be found in the .store app.*
+
+## Vision Statement Summary For This App
 
 Rockrapids.shop will create a dynamic digital showcase for the retail sector in Rock Rapids, highlighting special promotions, new merchandise arrivals, and unique shopping experiences to drive foot traffic to local businesses. The platform will celebrate the distinctive character of Main Street shopping through featured store profiles, merchant spotlights, and behind-the-scenes glimpses of local retail operations. Interactive event listings will promote shopping-adjacent experiences like wine tastings, sidewalk sales, holiday markets, and in-store demonstrations that transform retail into community entertainment. Push notifications for limited-time offers, flash sales, and seasonal clearances will help shoppers discover exceptional values while supporting local merchants. Curated shopping guides will help visitors discover themed retail experiences—from antique hunting to boutique fashion—that match their specific interests and enhance their Rock Rapids visit. User-generated content including reviews, photos, and shopping trip recaps will build an authentic community perspective on the retail landscape of Rock Rapids.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,4 +26,21 @@ Rockrapids.shop will create a dynamic digital showcase for the retail sector in 
 5. Develop a simple content management system allowing merchants to update their own information
 
 6. Launch with 10-15 local merchant profiles and a calendar of summer shopping events
+
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
 
