--- a/INFO/5.md
+++ b/INFO/5.md
@@ -3,16 +3,15 @@ layout: page
 title: STORE
 permalink: /FOSS/5/
 ---
-
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.store**
-
 **What inventory is for sale right now**
 
-This app will function as an announcement of things that that for sale.  Not just in Main Street stores, but also on Etsy or things that one would find on Craigslist or Facebook Marketplace.
+*This app will function as an announcement of LOCAL things that that for sale or to be given to a good home.  Not just in Main Street stores, but also on Etsy or perhaps things that one would find on Craigslist or Facebook Marketplace.*
+
+## Vision Statement Summary For This App
 
 Rockrapids.store will function as a LOCAL, for friends, service-after-the-sale digital marketplace and product showcase that connects consumers with merchandise available from Rock Rapids retailers and artisans, whether from physical Main Street locations or online platforms like Etsy. The platform will create a comprehensive product database of items available for purchase locally, supporting photographs, descriptions, pricing, and availability status to help shoppers find exactly what they're seeking. Integration with online storefronts will enable Rock Rapids crafters, artists, and small-batch producers to expand their reach while maintaining their connection to the local community. Curated collection features will highlight seasonally relevant items, gift ideas, locally produced specialties, and unique finds that distinguish Rock Rapids as a shopping destination. The platform will facilitate both in-store pickup and direct shipping options, allowing distant customers with connections to Rock Rapids to support local businesses. User wish lists and product alerts will notify shoppers when desired items become available or go on sale, enhancing the connection between local merchants and interested buyers.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,4 +26,20 @@ Rockrapids.store will function as a LOCAL, for friends, service-after-the-sale d
 5. Create a merchant dashboard allowing sellers to add and update their product listings
 
 6. Launch with a selection of products from 5-7 participating merchants across different categories
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
 
