--- a/INFO/6.md
+++ b/INFO/6.md
@@ -3,16 +3,15 @@ layout: page
 title: WORK
 permalink: /FOSS/6/
 ---
+**For Job Hunters, people lookign to pick up some extra income**
 
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.work**
+*Not just local employment opportunities, but also remote work and other side hustle gigs to pick up some extra money.*
 
-**For Job Hunters**
-
-Not just local employment opportunities, but also remote work and other side hustle gigs to pick up some extra money.
+## Vision Statement Summary For This App
 
 Rockrapids.work will connect job seekers in Rock Rapids with employment opportunities both locally and remotely, supporting economic vitality while enabling residents to build careers without leaving the community they love. The platform will maintain a comprehensive database of local job openings with detailed descriptions, qualification requirements, and application instructions from businesses throughout Rock Rapids and neighboring areas. Remote work opportunities that are compatible with Rock Rapids residency will be featured prominently, highlighting positions that allow people to enjoy small-town living while participating in the broader digital economy. Resources for job seekers will include resume building tools, interview preparation guides, and skill development opportunities specific to industries relevant to the region. The platform will spotlight success stories of Rock Rapids residents who have built satisfying careers locally or found innovative ways to work remotely while maintaining their connection to the community. Employer profiles will showcase local businesses as workplaces, highlighting their company culture, growth opportunities, and contributions to the Rock Rapids economy.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,3 +26,19 @@ Rockrapids.work will connect job seekers in Rock Rapids with employment opportun
 5. Create basic resume and application resources tailored to common local industries
 
 6. Launch with 15-20 active job listings from both local employers and remote work platforms
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
