--- a/INFO/7.md
+++ b/INFO/7.md
@@ -3,17 +3,16 @@ layout: page
 title: XYZ
 permalink: /FOSS/7/
 ---
-
-
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.xyz**
-
 **XYZ is for VOLUNTEERS**
 
-Volunteers do everything in the end ... this app is about coordinating and optimizing volunteer time.
+*Volunteers are the XYZ, the people who fill the gaps, to everything work... this app is about efficiently coordinating and optimizing the engagement and satisfaction of volunteer time.*
+
+
+## Vision Statement Summary For This App
 
 Rockrapids.xyz will serve as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of service that strengthens the town's social fabric. The platform will showcase volunteer opportunities from various community organizations, clearly outlining the skills needed, time commitments, and positive impacts to help individuals find meaningful ways to contribute. Special recognition features will highlight exceptional volunteers through Volunteer of the Day/Month/Year programs, sharing their stories and contributions to inspire others in the community. Real-time tracking of community service projects will allow residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The platform will facilitate team formation for larger initiatives, connecting project leaders with potential volunteers and helping coordinate group efforts efficiently. Training resources and skill development opportunities will be featured to help volunteers build capabilities that benefit both their service activities and personal growth.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -28,3 +27,19 @@ Rockrapids.xyz will serve as the central hub for volunteer engagement in Rock Ra
 5. Develop a project tracking dashboard showing progress on community initiatives
 
 6. Launch with 10-15 active volunteer opportunities from different community organizations
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
