--- a/INFO/2.md
+++ b/INFO/2.md
@@ -3,16 +3,15 @@ layout: page
 title: FUN
 permalink: /FOSS/2/
 ---
-
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.fun**
-
 **Fun Activities, Things To See and Social Engagement**
 
-Fun continues in Rock Rapids and builds on our Heritage
+*Fun continues in Rock Rapids and builds on our Heritage*
+
+## Vision Statement Summary For This App
 
 Rockrapids.fun will serve as the definitive digital guide to recreational activities, entertainment options, and special events in and around Rock Rapids, helping residents and visitors discover exciting ways to enjoy their time in the area. The platform will organize activities by category (outdoor recreation, family-friendly, dining experiences, nightlife) and by timeframe (today, this weekend, upcoming season) to help users quickly find relevant options. Integration with location data will allow visitors to plan efficient itineraries that maximize enjoyment based on proximity to Lake Okoboji or Sioux Falls attractions. Seasonal features will highlight weather-appropriate activities like winter sledding hills, summer water sports, spring hiking trails, and fall harvest festivals. The platform will showcase both recurring community events and one-time special occasions, ensuring users never miss out on fun opportunities. User-generated content including ratings, reviews, and photos will provide authentic perspectives on local experiences and help newcomers discover hidden gems.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,4 +26,21 @@ Rockrapids.fun will serve as the definitive digital guide to recreational activi
 5. Develop the AI for a basic recommendation engine based on user preferences and seasonal relevance
 
 6. Launch with a core set of recurring events and special summer activities for initial content
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
+
 
