--- a/INFO/3.md
+++ b/INFO/3.md
@@ -3,16 +3,14 @@ layout: page
 title: GUIDE
 permalink: /FOSS/3/
 ---
+**The Guide to ORDINARY information that everyone is supposed to know**
 
-What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.guide**
+*A complete, convenient, one-place GUIDE of service providers, school news, business updates, church bulletins, other news*
 
-**The guide to ORDINARY information that everyone is supposed to know**
-
-A GUIDE of service providers, school news, business updates, church bulletins, other news 
-
+## Vision Statement Summary For This App
 Rockrapids.guide will function as a comprehensive civic information hub that connects residents with essential community services, municipal updates, and important local announcements to enhance daily life in Rock Rapids. The platform will consolidate critical information from disparate sources—city government, utilities, schools, churches, and community organizations—into a single, easily navigable interface. Real-time alerts will notify residents about road closures, water main repairs, power outages, or other service disruptions that may impact their daily routines. An interactive community calendar will display upcoming civic events, council meetings, school activities, and religious services to help residents stay engaged with local institutions. The platform will maintain a searchable directory of local service providers, emergency contacts, and community resources for quick reference during times of need. Digital versions of community bulletins, obituaries, and official announcements will ensure important information reaches all residents regardless of their access to physical notice boards or newspapers.
 
-**MVP Development Roadmap:**
+## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
@@ -27,3 +25,20 @@ Rockrapids.guide will function as a comprehensive civic information hub that con
 5. Create mobile-responsive layouts optimized for quick information access during emergencies
 
 6. Test with a limited group of community organizations before full public launch
+
+## Design Philosophy
+
+As best we can, we will to understand the lay of the land and look forward to what will work in 2026, by looking at what works very well now and will probably persist. 
+
+This is probably about *reusing what has worked and will continue to be used, rather than re-inventing new. Our focus needs to be connecting, filling gaps and building something simple that future volunteers can maintain, improve, ie this is what design for maintainability and extensibility look like now.*
+
+- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html) ... We all know that digital age has *past tense* ushered in an unprecedented era of information availability, with a vast array of online resources now serving as primary repositories for community-related data ... but AI and vibe coding will change how data is exchanged. 
+
+- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html) ... Rock Rapids, a small town in northwest Iowa, exhibits a multifaceted online presence indicative of both its rural character and the pervasive influence of digital technologies. 
+
+
+- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html) ... Rock Rapids, Iowa, exhibits a multifaceted online presence of information served to the outside world.
+
+- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
+
+
