update each app with the general starting approach for building

--- a/INFO/0.md
+++ b/INFO/0.md
@@ -15,7 +15,7 @@ RockRapids.INFO will serve as a lightweight, centralized digital hub that aggreg
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
-1. Develop a RockRapid.INFO API framework strategy that will push/pull highlight content from all other Rock Rapids applications
+1. Develop a RockRapid.INFO API framework strategy that will push/pull highlight content from all other Rock Rapids applications, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
 2. Create a clean, card-based interface organizing information by category (arts, events, jobs)
 
