--- a/INFO/2.md
+++ b/INFO/2.md
@@ -15,7 +15,7 @@ Rockrapids.fun will serve as the definitive digital guide to recreational activi
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
-1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for activities with fields for location, schedule, category, and description
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for activities with fields for location, schedule, category, and description, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
 2. Create an intuitive calendar view with filters for activity type, age appropriateness, and indoor/outdoor
 
