--- a/INFO/4.md
+++ b/INFO/4.md
@@ -15,7 +15,7 @@ Rockrapids.shop will create a dynamic digital showcase for the retail sector in 
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
-1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for developing a merchant profile system with store information, hours, categories, and contact details
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for developing a merchant profile system with store information, hours, categories, and contact details, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
 2. Create a promotions database with fields for sale dates, discount information, and product images
 
