--- a/INFO/6.md
+++ b/INFO/6.md
@@ -15,7 +15,7 @@ Rockrapids.work will connect job seekers in Rock Rapids with employment opportun
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
-1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for the purpose of creating a job leads listing database with fields for position details, requirements, salary ranges, and application methods
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for the purpose of creating a job leads listing database with fields for position details, requirements, salary ranges, and application methods, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
 2. Develop employer profiles for local businesses with information about their workplace and company culture
 
