--- a/INFO/1.md
+++ b/INFO/1.md
@@ -15,7 +15,7 @@ The rockrapids.art platform will showcase the diverse artistic talents of Rock R
 
 0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
-1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for activities with fields for name, medium, biography, contact information, and image gallery
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for activities with fields for name, medium, biography, contact information, and image gallery, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
 2. Develop a simple submission form allowing artists, crafters, makers, collectors to create and update their own profiles
 
