--- a/INFO/4.md
+++ b/INFO/4.md
@@ -13,7 +13,7 @@ Rockrapids.shop will create a dynamic digital showcase for the retail sector in 
 
 ## Minimal Viable Prototype Development Roadmap
 
-0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+0. Before launching anything, [understand the design philosophy](#design-philosophy) ... then gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
 1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for developing a merchant profile system with store information, hours, categories, and contact details, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
