--- a/INFO/5.md
+++ b/INFO/5.md
@@ -13,7 +13,7 @@ Rockrapids.store will function as a LOCAL, for friends, service-after-the-sale d
 
 ## Minimal Viable Prototype Development Roadmap
 
-0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+0. Before launching anything, [understand the design philosophy](#design-philosophy) ... then gather intelligence on the already available sources of information and attempt to use those data in the form of data API
 
 1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories with an aim of creating a product database with fields for images, descriptions, pricing, availability, and merchant, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) for the Rock Rapids [community apps ecosystem](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#executive-summary), utilizing [Remix as the primary framework](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#why-remix-the-superior-choice-for-rock-rapids-1).
 
