--- a/INFO/2.md
+++ b/INFO/2.md
@@ -42,5 +42,7 @@ This is probably about *reusing what has worked and will continue to be used, ra
 
 - [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... a synthesis of the best practices for designing community communication app ecosystems that are *inherently, **by design**, maintainable and easily extensible by volunteer contributors.* 
 
+- [Think About Where the App Ecosytem Will Actually Be Built and Then Live](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html) ... *Why does the choice of host for the app ecosystem matters as much as it does?* It's because **development is for building the volunteer competencies and giving volunteers satisfying ways to contribute,** but almost all of the funds needed for this project will spent on hosting for the app ecosystem AND the funding those expense often/typically [whether this is *right* or not] will come FROM the volunteer who has *bought in* and really cares about the project. *It has to be affordable.*
+
 
 
