--- a/INFO/3.md
+++ b/INFO/3.md
@@ -10,6 +10,24 @@ permalink: /FOSS/3/
 ## Vision Statement Summary For This App
 Rockrapids.guide will function as a comprehensive civic information hub that connects residents with essential community services, municipal updates, and important local announcements to enhance daily life in Rock Rapids. The platform will consolidate critical information from disparate sources—city government, utilities, schools, churches, and community organizations—into a single, easily navigable interface. Real-time alerts will notify residents about road closures, water main repairs, power outages, or other service disruptions that may impact their daily routines. An interactive community calendar will display upcoming civic events, council meetings, school activities, and religious services to help residents stay engaged with local institutions. The platform will maintain a searchable directory of local service providers, emergency contacts, and community resources for quick reference during times of need. Digital versions of community bulletins, obituaries, and official announcements will ensure important information reaches all residents regardless of their access to physical notice boards or newspapers.
 
+Check out the all of apps in the ecosystem, including:
+
+- [Rockrapids.INFO](https://RockRapids.info) 
+
+- [Rockrapids.ART](https://RockRapids.art) 
+
+- [Rockrapids.FUN](https://RockRapids.fun) 
+
+- [Rockrapids.GUIDE](https://RockRapids.guide) 
+
+- [Rockrapids.SHOP](https://RockRapids.shop)
+
+- [Rockrapids.STORE](https://RockRapids.store) 
+
+- [Rockrapids.WORK](https://RockRapids.work)
+
+- [Rockrapids.XYZ](https://RockRapids.xyz).
+
 ## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything, [understand the design philosophy](#design-philosophy)... then gather intelligence on the already available sources of information and attempt to use those data in the form of data API
