--- a/INFO/7.md
+++ b/INFO/7.md
@@ -12,6 +12,24 @@ permalink: /FOSS/7/
 
 Rockrapids.xyz will serve as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of service that strengthens the town's social fabric. The platform will showcase volunteer opportunities from various community organizations, clearly outlining the skills needed, time commitments, and positive impacts to help individuals find meaningful ways to contribute. Special recognition features will highlight exceptional volunteers through Volunteer of the Day/Month/Year programs, sharing their stories and contributions to inspire others in the community. Real-time tracking of community service projects will allow residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The platform will facilitate team formation for larger initiatives, connecting project leaders with potential volunteers and helping coordinate group efforts efficiently. Training resources and skill development opportunities will be featured to help volunteers build capabilities that benefit both their service activities and personal growth.
 
+Check out the all of apps in the ecosystem, including:
+
+- [Rockrapids.INFO](https://RockRapids.info) 
+
+- [Rockrapids.ART](https://RockRapids.art) 
+
+- [Rockrapids.FUN](https://RockRapids.fun) 
+
+- [Rockrapids.GUIDE](https://RockRapids.guide) 
+
+- [Rockrapids.SHOP](https://RockRapids.shop)
+
+- [Rockrapids.STORE](https://RockRapids.store) 
+
+- [Rockrapids.WORK](https://RockRapids.work)
+
+- [Rockrapids.XYZ](https://RockRapids.xyz).
+
 ## Minimal Viable Prototype Development Roadmap
 
 0. Before launching anything, [understand the design philosophy](#design-philosophy) ... then gather intelligence on the already available sources of information and attempt to use those data in the form of data API
